CREATE TYPE public.email_direction AS ENUM ('inbound', 'outbound');

CREATE TABLE IF NOT EXISTS public.emails (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  project_id bigint REFERENCES public.projects(id) ON DELETE SET NULL,
  client_id bigint REFERENCES public.clients(id) ON DELETE SET NULL,
  template_id bigint,
  direction public.email_direction NOT NULL,
  subject character varying(512) NOT NULL,
  body text NOT NULL,
  from_address character varying(512) NOT NULL,
  to_address character varying(512) NOT NULL,
  cc character varying(1024),
  bcc character varying(1024),
  gmail_message_id character varying(255),
  sent_by_user_id bigint REFERENCES public.users(id) ON DELETE SET NULL,
  sent_at timestamp with time zone,
  created_at timestamp with time zone DEFAULT now() NOT NULL,
  updated_at timestamp with time zone DEFAULT now() NOT NULL
);

CREATE INDEX IF NOT EXISTS idx_emails_project_id ON public.emails(project_id);
CREATE INDEX IF NOT EXISTS idx_emails_client_id ON public.emails(client_id);
